[gd_scene load_steps=15 format=2]

[ext_resource path="res://HelpMenu.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://QPF_assets/art/HadamardPU.png" type="Texture" id=3]
[ext_resource path="res://ScoreMessage.tscn" type="PackedScene" id=4]
[ext_resource path="res://NextBackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://CoinPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fondo.tscn" type="PackedScene" id=7]
[ext_resource path="res://BackButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://QPF_assets/music/menu_music.ogg" type="AudioStream" id=9]
[ext_resource path="res://CoinGenerator.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="HelpMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Messages" type="CanvasLayer" parent="."]

[node name="CantTipsMessage" type="Label" parent="Messages"]
visible = false
margin_left = 257.0
margin_top = -4.0
margin_right = 445.0
margin_bottom = 155.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.321569, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "1/3"

[node name="TipNameMessage" type="Label" parent="Messages"]
visible = false
margin_left = 16.0
margin_top = 295.0
margin_right = 503.0
margin_bottom = 441.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.2, 0.2, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = -2
custom_constants/shadow_as_outline = 1
text = "      power up:"

[node name="HadPUSprite" type="Sprite" parent="Messages"]
visible = false
position = Vector2( 70.1073, 349.171 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="GoodTipMessage" type="Label" parent="Messages"]
visible = false
margin_left = 15.0
margin_top = 457.0
margin_right = 705.0
margin_bottom = 788.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.266667, 0.8, 0.0745098, 1 )
custom_colors/font_color_shadow = Color( 0.0213429, 0.0351563, 0.0179901, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -2
custom_constants/shadow_as_outline = 1
text = "+scores +1 point."

[node name="BadTipMessage" type="Label" parent="Messages"]
visible = false
margin_left = 15.0
margin_top = 513.0
margin_right = 705.0
margin_bottom = 788.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.875, 0.0102539, 0.0102539, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = -2
custom_constants/shadow_as_outline = 1
text = "-can be flipped to white.
"

[node name="UntouchableMessage" type="Label" parent="Messages"]
visible = false
margin_left = 9.0
margin_top = 752.0
margin_right = 707.0
margin_bottom = 871.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.321569, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -2
custom_constants/shadow_as_outline = 1
text = "---Untouchable area---
"
uppercase = true

[node name="ScoreMessage" parent="Messages" instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="NextButton" parent="." instance=ExtResource( 5 )]
margin_left = 535.0
margin_top = 920.0
margin_right = 720.0
margin_bottom = 1021.0

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = -1.0
margin_top = 920.0
margin_right = 170.0
margin_bottom = 1021.0

[node name="CoinsInHMenuTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="CoinPath" parent="." instance=ExtResource( 6 )]

[node name="Fondo" parent="." instance=ExtResource( 7 )]

[node name="BackBtt" parent="." instance=ExtResource( 8 )]
margin_top = 1194.0
margin_bottom = 1280.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -31.0
autoplay = true
bus = "Music"

[node name="CoinGenerator" parent="." instance=ExtResource( 10 )]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="CoinsInHMenuTimer" to="." method="coin_spawn_in_Help_Menu"]
[connection signal="pressed" from="BackBtt" to="." method="_on_BackBtt_pressed"]
